slurm-65910755.out
Individual.cpp:25:5: error: no declaration matches ‘int Individual::get_random_location(std::map<int, int>, std::vector<int>&, std::vector<int>*, int, int)’
   25 | int Individual::get_random_location(map<int,int> weights,std::vector<int>& node_neighbours, std::vector<int>* population, int individual_count, int location_count) {
      |     ^~~~~~~~~~
In file included from Individual.cpp:5:
Individual.h:30:13: note: candidate is: ‘static int Individual::get_random_location(std::map<int, int>, std::vector<int>&)’
   30 |  static int get_random_location(std::map<int,int> weights,std::vector<int>& node_neighbours);
      |             ^~~~~~~~~~~~~~~~~~~
Individual.h:7:7: note: ‘class Individual’ defined here
    7 | class Individual {
      |       ^~~~~~~~~~
Individual.cpp:67:6: error: no declaration matches ‘void Individual::move(std::vector<int>&, std::map<int, int>, std::vector<int>*, int, int)’
   67 | void Individual::move(std::vector<int>& node_neighbours, map<int,int> weights, std::vector<int>* population, int individual_count, int location_count) {
      |      ^~~~~~~~~~
In file included from Individual.cpp:5:
Individual.h:16:7: note: candidate is: ‘void Individual::move(std::vector<int>&, std::map<int, int>)’
   16 |  void move(std::vector<int>& new_locations, std::map<int,int> weights);
      |       ^~~~
Individual.h:7:7: note: ‘class Individual’ defined here
    7 | class Individual {
      |       ^~~~~~~~~~
Infect.cpp: In function ‘void simulate_parallel(int, int, uint8_t, const LocationUndirectedGraph&, std::vector<Individual>&, std::vector<std::tuple<int, int, int> >&)’:
Infect.cpp:82:95: error: no matching function for call to ‘Individual::move(std::vector<int>&, std::map<int, int>&, std::vector<int>*&, int&, int&)’
   82 |     current_individual.move(node_neighbours,weights,population,individual_count,location_count); // Stay in the same spot or move to a neighbouring node
      |                                                                                               ^
In file included from Infect.cpp:5:
Individual.h:16:7: note: candidate: ‘void Individual::move(std::vector<int>&, std::map<int, int>)’
   16 |  void move(std::vector<int>& new_locations, std::map<int,int> weights);
      |       ^~~~
Individual.h:16:7: note:   candidate expects 2 arguments, 5 provided
Infect.cpp: In function ‘void simulate_serial_naive(int, int, int, const LocationUndirectedGraph&, std::vector<Individual>&)’:
Infect.cpp:189:94: error: no matching function for call to ‘Individual::move(std::vector<int>&, std::map<int, int>&, std::vector<int>*&, int&, int&)’
  189 |    current_individual.move(node_neighbours,weights,population,individual_count,location_count); // Stay in the same spot or move to a neighbouring node
      |                                                                                              ^
In file included from Infect.cpp:5:
Individual.h:16:7: note: candidate: ‘void Individual::move(std::vector<int>&, std::map<int, int>)’
   16 |  void move(std::vector<int>& new_locations, std::map<int,int> weights);
      |       ^~~~
Individual.h:16:7: note:   candidate expects 2 arguments, 5 provided
/var/spool/slurmd.spool/job65910755/slurm_script: line 33: 3891114 Segmentation fault      (core dumped) ./3 > output3.txt
